utilities/stringify_attr/src/tests/derive/extra_attr3.stderr
error: Unexpected literal
  --> $DIR/extra_attr3.rs:20:37
   |
20 |         #[stringify(serde(rename(B, "C")))]
   |                                     ^^^
